--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jquery": "^3.3.1"
   },
   "dependencies": {
-    "electron-json-storage": "^4.1.0"
+    "electron-json-storage": "^4.1.0",
+    "ipfs": "^0.28.2"
   }
 }
