--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "jquery": "^3.3.1"
   },
   "dependencies": {
-    "electron-json-storage": "^4.1.0",
+    "electron-store": "^1.3.0",
     "ipfs": "^0.28.2"
   }
 }
