--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "planetary-director",
+  "name": "planetary-dictator",
   "version": "0.0.1",
   "description": "An electron based filemanger in the style of Norton Commander or Filezilla for managing the filestore of an IPFS ( Interplanetary Filesystem ) node.",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "electron .",
+    "postinstall": "electron-rebuild"
   },
   "keywords": [
     "filemanger",
@@ -16,13 +17,16 @@
   "license": "GPL-3.0",
   "devDependencies": {
     "copy-to-clipboard": "^3.0.8",
-    "electron": "^2.0.0",
     "gulp": "^3.9.1",
-    "gulp-sass": "^4.0.1",
-    "jquery": "^3.3.1"
+    "gulp-sass": "^4.0.1"
   },
   "dependencies": {
+    "buffer": "^5.1.0",
+    "electron": "^1.8.6",
+    "electron-rebuild": "^1.5.11",
     "electron-store": "^1.3.0",
-    "ipfs": "^0.28.2"
+    "go-ipfs-dep": "^0.4.14",
+    "ipfs": "^0.28.2",
+    "jquery": "^3.3.1"
   }
 }
