--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "electron-store": "^1.3.0",
     "go-ipfs-dep": "^0.4.14",
     "ipfs": "^0.28.2",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "node-dir": "^0.1.17"
   }
 }
