--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "electron-store": "^1.3.0",
     "go-ipfs-dep": "^0.4.14",
     "ipfs": "^0.28.2",
+    "ipfs-api": "^21.0.0",
+    "ipfs-mfs": "0.0.1",
+    "ipfsd-ctl": "^0.33.2",
     "jquery": "^3.3.1",
-    "node-dir": "^0.1.17"
+    "node-dir": "^0.1.17",
+    "user-home": "^2.0.0"
   }
 }
