Added bandwidth statistics to the main application interface

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "buffer": "^5.1.0",
+    "bytes": "^3.0.0",
     "electron": "^1.8.6",
     "electron-rebuild": "^1.5.11",
     "electron-store": "^1.3.0",
