--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ipfsd-ctl": "^0.33.2",
     "jquery": "^3.3.1",
     "node-dir": "^0.1.17",
+    "promise-fs": "^1.3.0",
     "user-home": "^2.0.0"
   }
 }
