--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jquery": "^3.3.1",
     "node-dir": "^0.1.17",
     "promise-fs": "^1.3.0",
+    "readdirp": "^2.1.0",
     "user-home": "^2.0.0"
   }
 }
