--- a/package.json
+++ b/package.json
@@ -1,40 +1,65 @@
 {
   "name": "planetary-dictator",
   "version": "0.0.1",
+  "author": "Anthony Mills",
   "description": "An electron based filemanger in the style of Norton Commander or Filezilla for managing the filestore of an IPFS ( Interplanetary Filesystem ) node.",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
-    "postinstall": "electron-rebuild"
+    "postinstall": "install-app-deps",
+    "pack": "build --dir",
+    "dist": "build"
+  },
+  "build": {
+    "appId": "com.anthony-mills.planetary-dictator",
+    "asarUnpack": [],
+    "dmg": {
+      "contents": [
+        {
+          "x": 110,
+          "y": 150
+        },
+        {
+          "x": 240,
+          "y": 150,
+          "type": "link",
+          "path": "/Applications"
+        }
+      ]
+    },
+    "linux": {
+      "maintainer": "Anthony Mills <oss@anthony-mills.com>",
+      "target": [
+        "AppImage",
+        "deb"
+      ]
+    },
+    "win": {
+      "target": "squirrel",
+      "icon": "build/icon.ico"
+    }
   },
   "keywords": [
     "filemanger",
     "IPFS",
     "electron"
   ],
-  "author": "Anthony Mills",
   "license": "GPL-3.0",
   "devDependencies": {
     "copy-to-clipboard": "^3.0.8",
+    "electron": "^1.8.7",
+    "electron-builder": "^20.15.3",
     "gulp": "^3.9.1",
     "gulp-sass": "^4.0.1"
   },
   "dependencies": {
     "buffer": "^5.1.0",
     "bytes": "^3.0.0",
-    "electron": "^1.8.6",
-    "electron-rebuild": "^1.5.11",
+    "chai": "^4.1.2",
     "electron-store": "^1.3.0",
-    "go-ipfs-dep": "^0.4.14",
-    "ipfs": "^0.28.2",
-    "ipfs-api": "^21.0.0",
-    "ipfs-mfs": "0.0.1",
-    "ipfsd-ctl": "^0.33.2",
+    "ipfs": "^0.29.3",
     "jquery": "^3.3.1",
     "node-dir": "^0.1.17",
-    "promise-fs": "^1.3.0",
-    "readdirp": "^2.1.0",
     "user-home": "^2.0.0"
   }
 }
