--- a/package.json
+++ b/package.json
@@ -58,8 +58,10 @@
     "chai": "^4.1.2",
     "electron-store": "^1.3.0",
     "ipfs": "^0.29.3",
+    "ipfs-api": "^22.0.2",
     "jquery": "^3.3.1",
     "node-dir": "^0.1.17",
+    "promise-fs": "^1.3.0",
     "user-home": "^2.0.0"
   }
 }
