--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "planetary-dictator",
   "version": "0.0.1",
   "author": "Anthony Mills",
-  "description": "An electron based filemanger in the style of Norton Commander or Filezilla for managing the filestore of an IPFS ( Interplanetary Filesystem ) node.",
+  "description": "An electron based file manager in the style of Norton Commander or Filezilla for managing the filestore of an IPFS ( Interplanetary Filesystem ) node.",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
@@ -12,6 +12,7 @@
   },
   "build": {
     "appId": "com.anthony-mills.planetary-dictator",
+    "icon": "build/icons/512x512.png",
     "asarUnpack": [],
     "dmg": {
       "contents": [
@@ -48,7 +49,7 @@
   "devDependencies": {
     "copy-to-clipboard": "^3.0.8",
     "electron": "^1.8.7",
-    "electron-builder": "^20.15.3",
+    "electron-builder": "20.14.7",
     "gulp": "^3.9.1",
     "gulp-sass": "^4.0.1"
   },
@@ -57,11 +58,14 @@
     "bytes": "^3.0.0",
     "chai": "^4.1.2",
     "electron-store": "^1.3.0",
+    "end-of-stream": "^1.4.1",
     "ipfs": "^0.29.3",
     "ipfs-api": "^22.0.2",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.10",
     "node-dir": "^0.1.17",
     "promise-fs": "^1.3.0",
+    "through2": "^2.0.3",
     "user-home": "^2.0.0"
   }
 }
