--- a/package.json
+++ b/package.json
@@ -6,7 +6,38 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
-    "postinstall": "electron-rebuild"
+    "postinstall": "electron-rebuild",
+    "dist": "build",
+    "pack": "build --dir"
+  },
+  "build": {
+    "appId": "com.anthony-mills.planetary-dictator",
+    "asarUnpack": [],
+    "dmg": {
+      "contents": [
+        {
+          "x": 110,
+          "y": 150
+        },
+        {
+          "x": 240,
+          "y": 150,
+          "type": "link",
+          "path": "/Applications"
+        }
+      ]
+    },
+    "linux": {
+      "maintainer": "Anthony Mills <oss@anthony-mills.com>",
+      "target": [
+        "AppImage",
+        "deb"
+      ]
+    },
+    "win": {
+      "target": "squirrel",
+      "icon": "build/icon.ico"
+    }
   },
   "keywords": [
     "filemanger",
@@ -17,14 +48,15 @@
   "license": "GPL-3.0",
   "devDependencies": {
     "copy-to-clipboard": "^3.0.8",
+    "electron": "^1.8.6",
+    "electron-builder": "^20.15.3",
     "gulp": "^3.9.1",
     "gulp-sass": "^4.0.1"
   },
   "dependencies": {
     "buffer": "^5.1.0",
     "bytes": "^3.0.0",
-    "electron": "^1.8.6",
-    "electron-rebuild": "^1.5.11",
+    "chai": "^4.1.2",
     "electron-store": "^1.3.0",
     "go-ipfs-dep": "^0.4.14",
     "ipfs": "^0.28.2",
