--- a/package.json
+++ b/package.json
@@ -59,8 +59,10 @@
     "chai": "^4.1.2",
     "electron-store": "^1.3.0",
     "end-of-stream": "^1.4.1",
+    "go-ipfs-dep": "^0.4.15",
     "ipfs": "^0.29.3",
     "ipfs-api": "^22.0.2",
+    "ipfsd-ctl": "^0.37.5",
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "node-dir": "^0.1.17",
